--- a/css/styles.css
+++ b/css/styles.css
@@ -130,11 +130,11 @@ button:hover {
 
 input[type=color] {
     width: 100%;
-    height: 100px;
+    height: 80px;
     padding: 0;
     border: 0;
+    margin-bottom: 10px;
 }
-
 
 .canvas-wrapper {
     min-height: 100%;
