--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: FFMarkRegular, serif;
+    font-family: FFMarkRegular, sans-serif;
     font-size: 12px;
 }
 
